--- a/severitycal.html
+++ b/severitycal.html
@@ -172,7 +172,7 @@
             min-width: 20px;
         }
         .severity-container {
-            max-width: 700px;
+            max-width: 900px;
             margin: 40px auto;
             padding: 30px;
             background-color: #ffffff;
@@ -215,8 +215,10 @@
             width: 100%;
             font-size: 1rem;
             border-radius: 10px;
-            border: 1px solid #B0BEC5;
+            border: 1px solid #ccc;
             margin-bottom: 12px;
+            background-color: rgb(223, 241, 247);
+
         }
         .calculate-btn {
             width: 100%;
@@ -261,12 +263,16 @@
 
 .note-container p {
     margin-top: 15px;
+    text-align: justify;
 }
 @media (max-width: 768px) {
     .note-container {
         margin: 15px; 
         padding: 10px; 
     }
+}
+strong{
+    color: #007bff;
 }
 </style>
 	</head>
