--- a/fireextinguishercal.html
+++ b/fireextinguishercal.html
@@ -221,6 +221,8 @@
             border-radius: 5px;
             border: 1px solid #ccc;
             font-size: 14px;
+            background-color: rgb(223, 241, 247);
+
         }
 
         .calculate-btn {
@@ -262,7 +264,7 @@
     font-size: 16px;
     line-height: 1.5;
     color: #333;
-    max-width: 1000px;
+    max-width: 1200px;
     margin-bottom: 15px;
 }
 
@@ -274,12 +276,16 @@
 
 .note-container p {
     margin-top: 15px;
+    text-align: justify;
 }
 @media (max-width: 768px) {
     .note-container {
         margin: 15px; 
         padding: 10px; 
     }
+}
+strong{
+    color: #005bca;
 }
 </style>
 	</head>
