--- a/fireloadercal.html
+++ b/fireloadercal.html
@@ -172,7 +172,7 @@
         }
        /* Container Styling */
 .calculator-container {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 30px;
     background: #ffffff;
@@ -202,9 +202,11 @@
     width: 100%;
     padding: 12px;
     border-radius: 6px;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     font-size: 16px;
     color: #333;
+    background-color: rgb(223, 241, 247);
+
 }
 
 /* Button Styling */
@@ -256,7 +258,7 @@ h2 {
 }
 
 /* Additional Heading Colors for Sections */
-h3 {
+.explanation h3 {
     font-size: 24px;
     color: #1560bd;
     margin-bottom: 15px;
@@ -319,6 +321,39 @@ h3 {
         margin: 10px 10px; 
         padding: 10px; 
     }
+}
+.note-container {
+            margin:20px auto;
+    padding: 15px;
+    background-color: #eef3f7;
+    border: 1px solid #1560bd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+    max-width: 1100px;
+    margin-bottom: 15px;
+}
+
+.note-container h3 {
+    margin-top: 0;
+    color: #007bff;
+    font-size: 18px;
+}
+
+.note-container p {
+    margin-top: 15px;
+    text-align: justify;
+}
+@media (max-width: 768px) {
+    .note-container {
+        margin: 15px; 
+        padding: 10px; 
+    }
+}
+strong{
+    color: #0149ac;
 }
 </style>
 	</head>
@@ -617,6 +652,28 @@ h3 {
 
     <div id="result" class="result"></div>
     <div id="explanation" class="explanation"></div>
+</div>
+<div class="note-container">
+    <h3>note:</h3>
+    <p>
+        The Fire Load Calculator is a useful tool for estimating the potential energy release in the event of a fire. 
+        Fire load is a key factor in understanding fire safety requirements for buildings and materials. 
+        This tool calculates the fire load per square meter of an area based on:
+    </p>
+    <ul>
+        <li><strong>Mass of Material (kg):</strong> The total weight of the combustible material.</li>
+        <li><strong>Calories in Material (kJ/kg):</strong> The energy content of the material when burned.</li>
+        <li><strong>Total Area (m²):</strong> The floor area where the material is distributed.</li>
+    </ul>
+    <p>
+        Once you enter the required inputs, the calculator will provide the fire load in <strong>kJ/m²</strong>. 
+        Additionally, the result is explained in relatable terms, like the energy equivalent of burning apples or cups of coffee, 
+        to make the concept easier to grasp.
+    </p>
+    <p>
+        Understanding fire load is crucial for assessing fire risks and planning fire protection measures. 
+        Use this calculator to ensure safety and compliance with fire safety standards.
+    </p>
 </div>
 
 <script>
