--- a/incidentratecal.html
+++ b/incidentratecal.html
@@ -216,9 +216,11 @@ h2 {
     width: 100%;
     padding: 12px;
     border-radius: 6px;
-    border: 1px solid #ddd;
+    border: 1px solid #ccc;
     font-size: 16px;
     color: #333;
+    background-color: rgb(223, 241, 247);
+
 }
 
 /* Button Styling */
@@ -283,6 +285,39 @@ h2 {
         margin: 10px 10px; 
         padding: 10px; 
     }
+}
+.note-container {
+            margin:20px auto;
+    padding: 15px;
+    background-color: #eef3f7;
+    border: 1px solid #1560bd;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
+    max-width: 1100px;
+    margin-bottom: 15px;
+}
+
+.note-container h3 {
+    margin-top: 0;
+    color: #007bff;
+    font-size: 18px;
+}
+
+.note-container p {
+    margin-top: 15px;
+    text-align: justify;
+}
+@media (max-width: 768px) {
+    .note-container {
+        margin: 15px; 
+        padding: 10px; 
+    }
+}
+strong{
+    color: #0149ac;
 }
 </style>
 	</head>
@@ -580,6 +615,18 @@ h2 {
             <p id="resultExplanation"></p>
         </div>
     </div>
+</div>
+<div class="note-container">
+    <h3>note:</h3>
+    <p>
+        The Incidence Rate Calculator helps measure workplace safety by calculating the number of injuries per 100 employees. 
+    </p>
+    <p>
+        Enter the total number of workplace injuries and the average number of employees to calculate the incidence rate.
+    </p>
+    <p>
+        A lower incidence rate means fewer injuries and better workplace safety.
+    </p>
 </div>
 
 <script>
