--- a/ambientnoisecal.html
+++ b/ambientnoisecal.html
@@ -185,7 +185,7 @@
         .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #d5e5f4;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
