--- a/incidentratecal.html
+++ b/incidentratecal.html
@@ -289,7 +289,7 @@ h2 {
 .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #eef3f7;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -617,7 +617,7 @@ strong{
     </div>
 </div>
 <div class="note-container">
-    <h3>note:</h3>
+    <h3>Note:</h3>
     <p>
         The Incidence Rate Calculator helps measure workplace safety by calculating the number of injuries per 100 employees. 
     </p>
