--- a/laddercal.html
+++ b/laddercal.html
@@ -262,7 +262,7 @@ p {
 .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #eef3f7;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -579,7 +579,7 @@ strong{
     <div class="result-section" id="result"></div>
 </div>
 <div class="note-container">
-    <h3>note:</h3>
+    <h3>Note:</h3>
     <p>
         This calculator helps determine the ideal length of a ladder needed for a given vertical height. 
         Proper ladder length is essential for ensuring safety and maintaining the recommended setup angle.
