--- a/trir.html
+++ b/trir.html
@@ -176,7 +176,7 @@
             max-width: 800px;
             margin: 30px auto;
             padding: 20px;
-            background-color: #ebf2f4;
+            background-color: rgb(238, 248, 251);
            
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 20px; /* Adding border-radius to the container */
@@ -253,7 +253,7 @@
         .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: rgb(241, 250, 255);
+    background-color: rgb(238, 248, 251);
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 16px;
@@ -575,7 +575,7 @@ strong{
     <div id="result" class="result-container"></div>
 </div>
 <div class="note-container">
-    <h3>note:</h3>
+    <h3>Note:</h3>
     <p>
         This calculator helps you calculate the OSHA Total Recordable Injury Rate (TRIR), which is used to evaluate the safety performance of a workplace. 
         The TRIR is calculated by multiplying the number of recordable injuries by 200,000 (a standard multiplier) and dividing by the total employee hours worked.
