--- a/wireropecal.html
+++ b/wireropecal.html
@@ -248,7 +248,7 @@
         .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #d5e5f4;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -568,7 +568,8 @@ strong{
     
 </div>
 <div class="note-container">
-    <p>Note: Bulldog grips are used to form an eye or a loop at the end of a wire rope. Proper placement and number of grips ensure the safety and efficiency of the wire rope connection.</p>
+    <h3>Note:</h3>
+    <p> Bulldog grips are used to form an eye or a loop at the end of a wire rope. Proper placement and number of grips ensure the safety and efficiency of the wire rope connection.</p>
     <p><strong>Spacing:</strong> Bulldog grips should be spaced at a distance of approximately six times the rope diameter for optimal grip strength.</p>
     <p><strong>Calculation:</strong></p>
     <ul>
