--- a/dartcal.html
+++ b/dartcal.html
@@ -175,7 +175,7 @@
         .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #d5e5f4;
+    background-color: rgb(238, 248, 251);
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-size: 16px;
