--- a/drinkcal.html
+++ b/drinkcal.html
@@ -250,7 +250,7 @@ input{
 .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #eef3f7;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
