--- a/fallcal.html
+++ b/fallcal.html
@@ -247,7 +247,7 @@
 .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #eef3f7;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -576,7 +576,7 @@ strong{
     <div class="result" id="result"></div>
   </div>
   <div class="note-container">
-    <h3>note:</h3>
+    <h3>Note:</h3>
     <p>
         This calculator helps determine the minimum fall clearance required to safely stop a worker in case of a fall. 
         Fall clearance is the total distance needed to prevent a worker from hitting the ground during a fall.
