--- a/fireloadercal.html
+++ b/fireloadercal.html
@@ -325,7 +325,7 @@ h2 {
 .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #eef3f7;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -654,7 +654,7 @@ strong{
     <div id="explanation" class="explanation"></div>
 </div>
 <div class="note-container">
-    <h3>note:</h3>
+    <h3>Note:</h3>
     <p>
         The Fire Load Calculator is a useful tool for estimating the potential energy release in the event of a fire. 
         Fire load is a key factor in understanding fire safety requirements for buildings and materials. 
