--- a/ltifrcal.html
+++ b/ltifrcal.html
@@ -185,7 +185,7 @@
         .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #d5e5f4;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -570,7 +570,7 @@ strong{
     </div>
 
     <div class="note-container">
-        <h3>note:</h3>
+        <h3>Note:</h3>
         <p>
             This calculator helps you calculate the Lost Time Injury Frequency Rate (LTIFR) based on the number of lost time injuries and the total hours worked. The LTIFR is calculated by multiplying the number of injuries by 1,000,000 and then dividing by the total hours worked. 
             The result helps evaluate the safety performance in an organization:
