--- a/sclwireropecalculator.html
+++ b/sclwireropecalculator.html
@@ -255,7 +255,7 @@
 .note-container {
             margin:20px auto;
     padding: 15px;
-    background-color: #eef3f7;
+    background-color: rgb(223, 241, 247);
     border: 1px solid #1560bd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -575,7 +575,7 @@
         </div>
     </div>
     <div class="note-container">
-        <h3>note:</h3>
+        <h3>Note:</h3>
         <p>
             Use this calculator to find the Safe Working Load (SWL) of a wire rope.<br> 
             The SWL tells you the maximum weight the rope can safely handle. 
