--- a/about.html
+++ b/about.html
@@ -791,7 +791,7 @@ span{
 	<div class="container">
 
 		<div class="section-header">
-			<h3 style="color: #1560bd; font-weight: bold;">Valuable Experience from Top Companies</h3> <br>
+			<h3 style="color: #1560bd; font-weight: bold;">Professional Experience with Leading Companies</h3> <br>
 
 		</div>
 
