--- a/cfe.html
+++ b/cfe.html
@@ -209,12 +209,12 @@
             color: #dc3545;
         }
         
-        ul {
+        .card ul {
             padding-left: 1.5rem;
             text-align: justify;
         }
         
-        ul li {
+        .card ul li {
             margin-bottom: 0.5rem;
             text-align: justify;
         }
@@ -238,6 +238,9 @@
             font-weight: bold;
             text-align: justify;
         }
+       .accordion-body{
+        text-align: justify;
+       }
     </style>
 </head>
 
