--- a/enviauditing.html
+++ b/enviauditing.html
@@ -205,12 +205,12 @@
             color: #dc3545;
         }
         
-        ul {
+        .card ul {
             padding-left: 1.5rem;
             text-align: justify;
         }
         
-        ul li {
+        .card ul li {
             margin-bottom: 0.5rem;
             text-align: justify;
         }
@@ -232,6 +232,9 @@
         .highlight {
             color: #0082ca;
             font-weight: bold;
+            text-align: justify;
+        }
+        td{
             text-align: justify;
         }
     </style>
