--- a/mlcfiresystemservices.html
+++ b/mlcfiresystemservices.html
@@ -267,6 +267,19 @@
             border-radius: 10px;
             color: white;
         }
+        .doc-image {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+   
+    text-align: center; 
+}
+
+.doc-image img {
+    width: 90%; 
+    height: 100%; 
+}
+
     </style>
 </head>
 
@@ -638,10 +651,7 @@
                         <div class="text-center">
                             <img src="images\vindus_clients_images\fireservices.JPG" alt="Image Description" class="img-fluid" style="width:500px; height:500px;">
                         </div><br>
-                        <div class="col-md-6">
-                            <img src="images/vindus_clients_images/doc.jpeg">
-
-                        </div>
+                       
 
 
 
@@ -652,8 +662,11 @@
         </div>
     </div>
 
-
-
+    <div class="doc-image">
+        <img src="images/vindus_clients_images/doc.jpeg" alt="Document Image">
+    </div>
+    
+<br>
 
 
 
